--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
         "php": "^7.1",
         "php-di/php-di": "^5.4",
         "vlucas/phpdotenv": "^2.4",
-        "guzzlehttp/psr7": "^1.4"
+        "guzzlehttp/psr7": "^1.4",
+        "zendframework/zend-expressive-fastroute": "^2.1",
+        "http-interop/response-sender": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4",
