--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4",
-        "squizlabs/php_codesniffer": "^3.1"
+        "squizlabs/php_codesniffer": "^3.1",
+        "robmorgan/phinx": "^0.8.1",
+        "fzaninotto/faker": "^1.7"
     },
     "autoload": {
         "psr-4": {
