--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "vlucas/phpdotenv": "^2.4",
         "guzzlehttp/psr7": "^1.4",
         "zendframework/zend-expressive-fastroute": "^2.1",
-        "http-interop/response-sender": "^1.0"
+        "http-interop/response-sender": "^1.0",
+        "pagerfanta/pagerfanta": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4",
