--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "autoload": {
         "psr-4": {
             "App\\": "src",
-            "Tests\\": "tests"
+            "Tests\\": "tests",
+            "MyApp\\": "app"
         }
     },
     "authors": [
