--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "pagerfanta/pagerfanta": "^1.0",
         "twbs/bootstrap-sass": "^3.3",
         "twig/twig": "^2.4",
-        "fpdo/fluentpdo": "^1.1"
+        "fpdo/fluentpdo": "^1.1",
+        "swiftmailer/swiftmailer": "^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4",
