--- a/example.env
+++ b/example.env
@@ -6,3 +6,11 @@ DB_PORT=3306
 DB_NAME=dbname
 DB_USER=user
 DB_PASS=pass
+
+EMAIL_CONTACT=contact@domain.com
+EMAIL_DRIVER=smtp
+EMAIL_HOST=127.0.0.1
+EMAIL_PORT=25
+EMAIL_USER=user
+EMAIL_PASS=pass
+EMAIL_ENCRYPTION=null
