--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "twbs/bootstrap-sass": "^3.3",
         "twig/twig": "^2.4",
         "fpdo/fluentpdo": "^1.1",
-        "swiftmailer/swiftmailer": "^6.0"
+        "swiftmailer/swiftmailer": "^6.0",
+        "filp/whoops": "^2.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4",
